# CppRand

./: README.md  meson.build  meson_options.txt
include/: GeneratorImplementation.hpp  RandomGenerators.hpp  RandomGeneratorsSIMD.hpp  Splitmix64.hpp  Xoroshiro128plus.hpp  Xorshift1024star.hpp  Xorshift128plus.hpp  Xoshiro256plus.hpp  Xoshiro256plusSIMDPP.hpp  Xoshiro256starstar.hpp  Xoshiro256starstarSIMDPP.hpp  config.h.in  meson.build
subprojects/: libsimdpp.wrap
test/: meson.build  randomGenTest.cpp  simdRunTest.cpp  sourceTest.cpp
