#install_headers('GeneratorImplementation.hpp',
#                'RandomGenerators.hpp',
#                'RandomGeneratorsSIMD.hpp',
#                'Splitmix64.hpp',
#                'Xoroshiro128plus.hpp',
#                'Xorshift1024star.hpp',
#                'Xorshift128plus.hpp',
#                'Xoshiro256starstar.hpp',
#                'Xoshiro256plus.hpp',
#                'Xoshiro256starstarSIMDPP.hpp',
#                'Xoshiro256plusSIMDPP.hpp')

configure_file(input : 'config.h.in',
               output : 'config.h',
               configuration : cxxconf_data)

