sourceTest = executable('sourceTest', 'sourceTest.cpp',
                  include_directories : inc
                    )

randomGenTest  = executable('randomGenTest', 'randomGenTest.cpp',
                  include_directories : inc
                    )

test('sourceTest', sourceTest)
test('randomGenTest', randomGenTest)
