sourceTest = executable('sourceTest', 'sourceTest.cpp',
                  include_directories : inc_dirs
                    )

randomGenTest  = executable('randomGenTest', 'randomGenTest.cpp',
                  include_directories : inc_dirs
                    )


simdRunTest = executable('simdRunTest', 'simdRunTest.cpp',
                  include_directories : inc_dirs
                    )

test('sourceTest', sourceTest)
test('randomGenTest', randomGenTest)
test('simdRunTest', simdRunTest)
